unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/litify_time__lit_Tax_Code__c.object-meta.xml
<CustomObject>
    <label>Tax Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>