unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/fields/litify_time__lit_Country__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_time__lit_Country</valueSetName>
    </valueSet>
</CustomField>