unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/fields/litify_time__lit_Percent__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Percent__c</fullName>
    <label>Percent</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>