unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/fields/litify_time__lit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>