unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/fields/litify_time__lit_State__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_time__lit_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>litify_time__lit_State</valueSetName>
    </valueSet>
</CustomField>