unpackaged/main/default/objects/litify_time__lit_Tax_Code__c/validationRules/litify_time__Tax_Percent_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>litify_time__Tax_Percent_Cannot_Change</fullName>
    <active>true</active>
    <errorConditionFormula>(PRIORVALUE( litify_time__lit_Percent__c ) !=  litify_time__lit_Percent__c ) &amp;&amp;  NOT( ISNEW() )</errorConditionFormula>
    <errorDisplayField>litify_time__lit_Percent__c</errorDisplayField>
    <errorMessage>Percent cannot change on existing Tax Codes.</errorMessage>
</ValidationRule>